Update to reflect new Amazon page format

--- a/result.html
+++ b/result.html
@@ -1,457 +1,142 @@
-<html><head></head><body><h1>1591845335</h1><p><b>All Marketers are Liars: The Underground Classic That Explains How Marketing Really Works--and Why Authenticity Is the Best Marketing of All: Seth Godin: 9781591845331: Amazon.com: Books</b></p><h2>com</h2>
-<b>Amazon Best Sellers Rank:</b> 
+<html><head></head><body><h1>1688289976</h1><p><b>Move Over Brokers Here Comes The Blockchain: Finlow-Bates, Dr Keir: 9781688289970: Amazon.com: Books</b></p><h2>com</h2><span class="a-list-item">
 
 
 
+<span class="a-text-bold">
+Best Sellers Rank:
+</span>
+#524,041 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
+<ul class="a-unordered-list a-nostyle a-vertical zg_hrsr">
 
+<li><span class="a-list-item"> #124 in <a href="/gp/bestsellers/books/379367011/ref=pd_zg_hrsr_books">E-Commerce (Books)</a></span></li>
 
+<li><span class="a-list-item"> #466 in <a href="/gp/bestsellers/books/2598/ref=pd_zg_hrsr_books">Money &amp; Monetary Policy (Books)</a></span></li>
 
-
-
-
-
-
-
-
-#25,355 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#50</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/2699/ref=pd_zg_hrsr_books">Advertising (Books)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#118</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/13022421/ref=pd_zg_hrsr_books">Communication &amp; Media Studies</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#24</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/2709/ref=pd_zg_hrsr_books">Market Research Business (Books)</a></span>
-    </li>
 </ul>
 
-<h2>co.uk</h2>
-<b>Amazon Bestsellers Rank:</b> 
+
+
+</span>
+<h2>co.uk</h2><span class="a-list-item">
 
 
 
+<span class="a-text-bold">
+Best Sellers Rank:
+</span>
+225,886 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
+<ul class="a-unordered-list a-nostyle a-vertical zg_hrsr">
 
+<li><span class="a-list-item"> 362 in <a href="/gp/bestsellers/books/14288271/ref=pd_zg_hrsr_books">Online Shopping</a></span></li>
 
+<li><span class="a-list-item"> 442 in <a href="/gp/bestsellers/books/268173/ref=pd_zg_hrsr_books">Macroeconomics (Books)</a></span></li>
 
+<li><span class="a-list-item"> 1,692 in <a href="/gp/bestsellers/books/404028/ref=pd_zg_hrsr_books">E-Commerce Web Development</a></span></li>
 
-
-
-
-
-
-
-14,484 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#72</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/659960/ref=pd_zg_hrsr_books">Brands &amp; Corporate Identity</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#42</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/404216/ref=pd_zg_hrsr_books">E-Business</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#39</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/268315/ref=pd_zg_hrsr_books">Advertising</a></span>
-    </li>
 </ul>
 
-<h2>de</h2>
-<b>Amazon Bestseller-Rang:</b> 
+
+
+</span>
+<h2>de</h2><span class="a-list-item">
 
 
 
+<span class="a-text-bold">
+Amazon Bestseller-Rang:
+</span>
+Nr. 209,364 in Bücher (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">Siehe Top 100 in Bücher</a>)
+<ul class="a-unordered-list a-nostyle a-vertical zg_hrsr">
 
+<li><span class="a-list-item"> Nr. 5,485 in <a href="/gp/bestsellers/books/124/ref=pd_zg_hrsr_books">Computer &amp; Internet (Bücher)</a></span></li>
 
+<li><span class="a-list-item"> Nr. 5,581 in <a href="/gp/bestsellers/books/120/ref=pd_zg_hrsr_books">Börse &amp; Geld (Bücher)</a></span></li>
 
+<li><span class="a-list-item"> Nr. 77,742 in <a href="/gp/bestsellers/books/17561351031/ref=pd_zg_hrsr_books">Fremdsprachige Bücher</a></span></li>
 
-
-
-
-
-
-
-Nr. 17.372 in Fremdsprachige Bücher (<a href="/gp/bestsellers/books-intl-de/ref=pd_zg_ts_books-intl-de">Siehe Top 100 in Fremdsprachige Bücher</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">Nr. 47</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books-intl-de/58317011/ref=pd_zg_hrsr_books-intl-de">Werbung &amp; Marketing</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">Nr. 49</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books-intl-de/69179011/ref=pd_zg_hrsr_books-intl-de">Medienwissenschaften (Fremdsprachige Bücher)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">Nr. 18</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books-intl-de/58325011/ref=pd_zg_hrsr_books-intl-de">Marketingforschung</a></span>
-    </li>
 </ul>
 
-<h2>fr</h2>
-<b>Classement des meilleures ventes d'Amazon:</b> 
+
+
+</span>
+<h2>fr</h2><span class="a-list-item">
 
 
 
+<span class="a-text-bold">
+Classement des meilleures ventes d'Amazon :
+</span>
+654,960 en Livres anglais et étrangers (<a href="/gp/bestsellers/english-books/ref=pd_zg_ts_english-books">Voir les 100 premiers en Livres anglais et étrangers</a>)
+<ul class="a-unordered-list a-nostyle a-vertical zg_hrsr">
 
+<li><span class="a-list-item"> 1,175 en <a href="/gp/bestsellers/books/406010/ref=pd_zg_hrsr_books">Politique économique et sociale</a></span></li>
 
+<li><span class="a-list-item"> 1,262 en <a href="/gp/bestsellers/books/489760/ref=pd_zg_hrsr_books">Monnaie</a></span></li>
 
+<li><span class="a-list-item"> 2,384 en <a href="/gp/bestsellers/books/407724/ref=pd_zg_hrsr_books">Commerce électronique dans l'entreprise</a></span></li>
 
-
-
-
-
-
-
-1.640 en Livres anglais et étrangers (<a href="/gp/bestsellers/english-books/ref=pd_zg_ts_english-books">Voir les 100 premiers en Livres anglais et étrangers</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n°2</span>
-    <span class="zg_hrsr_ladder">dans&nbsp;<a href="/gp/bestsellers/english-books/73887011/ref=pd_zg_hrsr_english-books">Market Research Business</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n°6</span>
-    <span class="zg_hrsr_ladder">dans&nbsp;<a href="/gp/bestsellers/english-books/73879011/ref=pd_zg_hrsr_english-books">Advertising (Livres anglais et étrangers)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n°2</span>
-    <span class="zg_hrsr_ladder">dans&nbsp;<a href="/gp/bestsellers/english-books/84749011/ref=pd_zg_hrsr_english-books">Media Studies (Livres anglais et étrangers)</a></span>
-    </li>
 </ul>
 
-<h2>es</h2>
-<b>Clasificación en los más vendidos de Amazon:</b> 
+
+
+</span>
+<h2>es</h2><span class="a-list-item">
 
 
 
+<span class="a-text-bold">
+Clasificación en los más vendidos de Amazon:
+</span>
+nº1,190 en <a href="/gp/bestsellers/books/902663031/ref=pd_zg_hrsr_books">Software y aplicaciones de negocio (Libros)</a>
+<ul class="a-unordered-list a-nostyle a-vertical zg_hrsr">
 
+<li><span class="a-list-item"> nº18,737 en <a href="/gp/bestsellers/books/902597031/ref=pd_zg_hrsr_books">Empresa, estrategia y gestión (Libros)</a></span></li>
 
- 
+<li><span class="a-list-item"> nº130,458 en <a href="/gp/bestsellers/books/665418031/ref=pd_zg_hrsr_books">Libros en inglés</a></span></li>
 
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n.° 3156</span>
-    <span class="zg_hrsr_ladder">en&nbsp;<a href="/gp/bestsellers/books/902597031/ref=pd_zg_hrsr_books">Empresa, estrategia y gestión (Libros)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n.° 16931</span>
-    <span class="zg_hrsr_ladder">en&nbsp;<a href="/gp/bestsellers/books/665418031/ref=pd_zg_hrsr_books">Libros en inglés</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n.° 175</span>
-    <span class="zg_hrsr_ladder">en&nbsp;<a href="/gp/bestsellers/books/15246806031/ref=pd_zg_hrsr_books">Marketing</a></span>
-    </li>
 </ul>
 
-<h2>com.mx</h2>
-<b>Clasificación en los más vendidos de Amazon:</b> 
+
+
+</span>
+<h2>ca</h2><span class="a-list-item">
 
 
 
+<span class="a-text-bold">
+Best Sellers Rank:
+</span>
+#457,449 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
+<ul class="a-unordered-list a-nostyle a-vertical zg_hrsr">
 
+<li><span class="a-list-item"> #84 in <a href="/gp/bestsellers/books/380935011/ref=pd_zg_hrsr_books">E-Commerce Technology</a></span></li>
 
+<li><span class="a-list-item"> #401 in <a href="/gp/bestsellers/books/935544/ref=pd_zg_hrsr_books">Monetary Policy (Books)</a></span></li>
 
+<li><span class="a-list-item"> #402 in <a href="/gp/bestsellers/books/951618/ref=pd_zg_hrsr_books">Money &amp; Monetary Policy Economics</a></span></li>
 
-
-
-
-
-
-
-nº16,693 en Libros (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">Ver el Top 100 en Libros</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n°18</span>
-    <span class="zg_hrsr_ladder">en&nbsp;<a href="/gp/bestsellers/books/9575976011/ref=pd_zg_hrsr_books">Investigación de Mercados (Libros)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n°35</span>
-    <span class="zg_hrsr_ladder">en&nbsp;<a href="/gp/bestsellers/books/9576064011/ref=pd_zg_hrsr_books">Ciencias de la Información (Libros)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">n°72</span>
-    <span class="zg_hrsr_ladder">en&nbsp;<a href="/gp/bestsellers/books/9575979011/ref=pd_zg_hrsr_books">Publicidad (Libros)</a></span>
-    </li>
 </ul>
 
-<h2>ca</h2>
-<b>Amazon Bestsellers Rank:</b> 
+
+
+</span>
+<h2>com.au</h2><span class="a-list-item">
 
 
 
+<span class="a-text-bold">
+Best Sellers Rank:
+</span>
+297,637 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
+<ul class="a-unordered-list a-nostyle a-vertical zg_hrsr">
 
+<li><span class="a-list-item"> 134 in <a href="/gp/bestsellers/books/4897001051/ref=pd_zg_hrsr_books">Online Shopping</a></span></li>
 
+<li><span class="a-list-item"> 608 in <a href="/gp/bestsellers/books/4894515051/ref=pd_zg_hrsr_books">Money &amp; Monetary Policy (Books)</a></span></li>
 
-
-
-
-
-
-
-
-#19,352 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#9</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/952348/ref=pd_zg_hrsr_books">Research (Books)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#39</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/13033051/ref=pd_zg_hrsr_books">Media Studies (Books)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#9</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/935830/ref=pd_zg_hrsr_books">Market Research (Books)</a></span>
-    </li>
 </ul>
 
-<h2>co.jp</h2>
-<b>Amazon 売れ筋ランキング:</b> 
 
 
-
-
-
-
-
-
-
-
-
-
-
-洋書 - 88,746位 (<a href="/gp/bestsellers/english-books/ref=pd_zg_ts_english-books">洋書の売れ筋ランキングを見る</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">378位</span>
-    <span class="zg_hrsr_ladder">─&nbsp;<a href="/gp/bestsellers/english-books/2638082051/ref=pd_zg_hrsr_english-books">Communication &amp; Media Studies</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">135位</span>
-    <span class="zg_hrsr_ladder">─&nbsp;<a href="/gp/bestsellers/english-books/2573520051/ref=pd_zg_hrsr_english-books">Market Research Business</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">169位</span>
-    <span class="zg_hrsr_ladder">─&nbsp;<a href="/gp/bestsellers/english-books/2573509051/ref=pd_zg_hrsr_english-books">Advertising</a></span>
-    </li>
-</ul>
-
-<h2>com.br</h2>
-<b>Lista de mais vendidos da Amazon:</b> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-Nº 60,236 em Livros (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">Conheça o Top 100 na categoria Livros</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">Nº44</span>
-    <span class="zg_hrsr_ladder">em&nbsp;<a href="/gp/bestsellers/books/13983243011/ref=pd_zg_hrsr_books">Importados sobre Marketing</a></span>
-    </li>
-</ul>
-
-<h2>com.au</h2>
-<b>Amazon Bestsellers Rank:</b> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-10,127 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#81</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/4894617051/ref=pd_zg_hrsr_books">Advertising (Books)</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#111</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/4900110051/ref=pd_zg_hrsr_books">Communication &amp; Media Studies</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#41</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/4901986051/ref=pd_zg_hrsr_books">Market Research Business</a></span>
-    </li>
-</ul>
-
-<h2>in</h2>
-<b>Amazon Bestsellers Rank:</b> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-#3,035 in Books (<a href="/gp/bestsellers/books/ref=pd_zg_ts_books">See Top 100 in Books</a>)
- 
-
-
-
-
-
-<style type="text/css">
-.zg_hrsr { margin: 0; padding: 0; list-style-type: none; }
-.zg_hrsr_item { margin: 0 0 0 10px; }
-.zg_hrsr_rank { display: inline-block; width: 80px; text-align: right; }
-</style>
-
-<ul class="zg_hrsr">
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#3</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/4149445031/ref=pd_zg_hrsr_books">Sales</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#2</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/4149449031/ref=pd_zg_hrsr_books">Media Studies</a></span>
-    </li>
-    <li class="zg_hrsr_item">
-    <span class="zg_hrsr_rank">#9</span>
-    <span class="zg_hrsr_ladder">in&nbsp;<a href="/gp/bestsellers/books/4149443031/ref=pd_zg_hrsr_books">Marketing</a></span>
-    </li>
-</ul>
-
-</body></html>
+</span>
+<h2> No results for:</h2><ul><li>com.mx</li><li>co.jp</li><li>com.br</li><li>in</li></ul></body></html>
